# discrete-logarithm

./: BENCHMARKS.md  Cargo.toml  README.md
.github/workflows/: build.yml  ci.yml
benches/: bignum_ops.rs  discrete_log.rs
examples/: benchmark_comparison.md
src/: bignum.rs  index_calculus.rs  lib.rs  n_order.rs  pohlig_hellman.rs  pollard_rho.rs  shanks_steps.rs  trial_mul.rs  utils.rs
