[package]
name = "discrete-logarithm"
version = "1.0.0"
edition = "2021"
authors = ["skyf0l <skyf0lmails@proton.me>"]
description = "Fast discrete logarithm solver"
repository = "https://github.com/skyf0l/discrete-logarithm"
license = "MIT OR Apache-2.0"
categories = ["algorithms", "mathematics"]
keywords = ["number-theory", "cryptography", "bignum", "discrete-logarithm"]
include = [
  "src/**/*",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
]
readme = "README.md"

[dependencies]
thiserror = "2.0"
primal = "0.3"

[dependencies.rug]
version = "1.26"
default-features = false
features = ["integer", "rand"]

[dependencies.num-bigint]
version = "0.4"
optional = true

[dependencies.ramp]
version = "0.7"
optional = true

[dependencies.ibig]
version = "0.3"
optional = true

[dependencies.rust-gmp]
version = "0.5"
optional = true

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
num-traits = "0.2"

[[bench]]
name = "bignum_ops"
harness = false

[[bench]]
name = "discrete_log"
harness = false

[features]
default = []
bench-num-bigint = ["num-bigint"]
bench-ramp = ["ramp"]
bench-ibig = ["ibig"]
bench-rust-gmp = ["rust-gmp"]
