[package]
name = "discrete-logarithm"
version = "1.0.0"
edition = "2021"
authors = ["skyf0l <skyf0lmails@proton.me>"]
description = "Fast discrete logarithm solver"
repository = "https://github.com/skyf0l/discrete-logarithm"
license = "MIT OR Apache-2.0"
categories = ["algorithms", "mathematics"]
keywords = ["number-theory", "cryptography", "bignum", "discrete-logarithm"]
include = [
  "src/**/*",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
]
readme = "README.md"

[dependencies]
thiserror = "2.0"
primal = "0.3"

[dependencies.rug]
version = "1.26"
default-features = false
features = ["integer", "rand"]
optional = true

[dependencies.num-bigint]
version = "0.4"
features = ["rand"]
optional = true

[dependencies.num-integer]
version = "0.1"
optional = true

[dependencies.num-traits]
version = "0.2"
optional = true

[dependencies.ibig]
version = "0.3"
optional = true

[dependencies.rust-gmp]
version = "0.5"
optional = true

[dependencies.rand]
version = "0.8"
optional = true

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = ["rug"]
num-bigint = ["dep:num-bigint", "dep:num-traits", "dep:num-integer", "dep:rand"]
ibig = ["dep:ibig", "dep:rand"]
rust-gmp = ["dep:rust-gmp", "dep:rand"]
